[package]
name = "pr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
regex = "1.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"

## Environment loading
dotenv = "0.15.0"

## Open files in default editor
edit = "0.1.4"

## Terminal UI stuff
termion = "1.5"
tui = { version = "0.18", default-features = false, features = ['termion'] }

loading = "*"
console = "0.15.7"
